# datastructure

./: README
inlupp1&2/: CMakeLists.txt  README  ex-12.txt  ex-13.txt  ex-15.txt  ex-6.txt  ex-7.txt  ex-8.txt  ex-9.txt  task1.c  task10.c  task11.c  task14.c  task16.c  task2  task2.c  task3  task3.c  task4  task4.c  task5.c
inlupp3/: CMakeLists.txt  README  output.txt  tree  tree.c
inlupp4/: CMakeLists.txt  Graph.h  Queue.h  README  Task1.c  Task2.c  Task3.c  Task4.c  Test.c  ex-3.txt  ex-4.txt
