
cmake_minimum_required(VERSION 3.5)



add_executable(task1 task1.c)
add_executable(task2 task2.c)
add_executable(task3 task3.c)
add_executable(task4 task4.c)
add_executable(task5 task5.c)
add_executable(task10 task10.c output.txt)
add_executable(task11 task11.c output.txt)
add_executable(task14 task14.c output.txt)
add_executable(task16 task16.c output.txt)

# ...
